[tool.poetry]
name = "all_chess_moves"
version = "0.1.0"
description = ""
authors = ["Daniel Timbrell <dantimbrell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
